fix modal UI overflow cutoff error

--- a/web/assets/picluster-ui.css
+++ b/web/assets/picluster-ui.css
@@ -229,7 +229,7 @@ textarea {
 
 #div_iframe {
   width:100%;
-  height: 100%;
+  max-height: 89.7%;
   z-index: -1;
 }
 
